getFirst is too new to link with jd2 release